Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,7 @@
     }
    ],
    "source": [
-    "names = restaurants\n",
+    "names = list(restaurants['name']\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
