--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
     }
    ],
    "source": [
-    "names = list(restaurants['name'])\n",
+    "names = list(map(lambdarestaurants['name'])\n",
     "names\n",
     "# ['Fork & Fig',\n",
     "#  'Salt And Board',\n",
