--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
     }
    ],
    "source": [
-    "review_counts = pass\n",
+    "review_counts = list(map(lambda x: x))\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
