--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -287,13 +287,13 @@
        "[610, 11, 1373, 680, 54, 647, 25, 20]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "review_counts = list(map(lambda x: x['review_count']))\n",
+    "review_counts = list(map(lambda x: x['review_count'], restaurants))\n",
     "review_counts # [610, 11, 1373, 680, 54, 647, 25, 20]"
    ]
   },
