--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,8 @@
     }
    ],
    "source": [
-    "total_reviews = pass\n",
+    "total_reviews = []\n",
+    "for \n",
     "total_reviews # 3420"
    ]
   },
