--- a/index.ipynb
+++ b/index.ipynb
@@ -321,8 +321,7 @@
     }
    ],
    "source": [
-    "total_reviews = []\n",
-    "for \n",
+    "total_reviews = sum(review_counts)\n",
     "total_reviews # 3420"
    ]
   },
