--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,8 @@
     }
    ],
    "source": [
-    "total_reviews = sum(review_counts)\n",
+    "total_reviews = 0\n",
+    "for review in review_\n",
     "total_reviews # 3420"
    ]
   },
