--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,8 @@
    ],
    "source": [
     "total_reviews = 0\n",
-    "for review in review_\n",
+    "for review in review_counts:\n",
+    "    to\n",
     "total_reviews # 3420"
    ]
   },
