--- a/index.ipynb
+++ b/index.ipynb
@@ -343,7 +343,7 @@
    "outputs": [],
    "source": [
     "def format_restaurant(restaurant):\n",
-    "    "
+    "    for price in restaurant"
    ]
   },
   {
