Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -343,7 +343,8 @@
    "outputs": [],
    "source": [
     "def format_restaurant(restaurant):\n",
-    "    for price in restaurant"
+    "    for price in restaurant:\n",
+    "        "
    ]
   },
   {
