--- a/index.ipynb
+++ b/index.ipynb
@@ -343,7 +343,8 @@
    "outputs": [],
    "source": [
     "def format_restaurant(restaurant):\n",
-    "    restaurant['price'] = len(restaurant['price'])"
+    "    restaurant['price'] = len(restaurant['price'])\n",
+    "    return "
    ]
   },
   {
