Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -344,7 +344,7 @@
    "source": [
     "def format_restaurant(restaurant):\n",
     "    restaurant['price'] = len(restaurant['price'])\n",
-    "    return "
+    "    return restaurant"
    ]
   },
   {
