--- a/index.ipynb
+++ b/index.ipynb
@@ -358,7 +358,7 @@
     "    restaurant['price'] = len(restaurant['price'])\n",
     "    return restaurant\n",
     "\n",
-    "restaurant[0]"
+    "restaurants"
    ]
   },
   {
