--- a/index.ipynb
+++ b/index.ipynb
@@ -343,7 +343,7 @@
    "outputs": [],
    "source": [
     "def format_restaurant(restaurant):\n",
-    "    restaurant['price'] = len(restaurant['price'])\n",
+    "    if restaurant['price'restaurant['price'] = len(restaurant['price'])\n",
     "    return restaurant"
    ]
   },
