Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -338,12 +338,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def format_restaurant(restaurant):\n",
-    "    if restaurant['price'restaurant['price'] = len(restaurant['price'])\n",
+    "    if restaurant['price'] == str:\n",
+    "        restaurant['price'] = len(restaurant['price'])\n",
     "    return restaurant"
    ]
   },
