--- a/index.ipynb
+++ b/index.ipynb
@@ -382,7 +382,7 @@
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    return list(map(lambda restaformat_restaurant(restaurants)))"
+    "    return list(map(lambda restaurant: format_restaurant(restaurants)))"
    ]
   },
   {
