--- a/index.ipynb
+++ b/index.ipynb
@@ -338,19 +338,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "def format_restaurant(restaurant):\n",
-    "    if restaurant['price'] == str:\n",
+    "    if type(restaurant['price']) == str:\n",
     "        restaurant['price'] = len(restaurant['price'])\n",
     "    return restaurant"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "{'name': 'Fork & Fig', 'price': 2, 'is_closed': False, 'review_count': 610}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
