--- a/index.ipynb
+++ b/index.ipynb
@@ -476,7 +476,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    list()"
+    "    list(map(lambda restaurant: restaur))"
    ]
   },
   {
