--- a/index.ipynb
+++ b/index.ipynb
@@ -476,7 +476,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    list(map(lambda restaurant: restaur))"
+    "    list(map(lambda restaurant: restaurant['is_closed'] == fals))"
    ]
   },
   {
