Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -476,7 +476,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    list(map(filter restaurant: restaurant['is_closed'] == False, ))"
+    "    list(filter(lambda restaurant: restaurant['is_closed'] == False, restaurants))"
    ]
   },
   {
