--- a/index.ipynb
+++ b/index.ipynb
@@ -551,7 +551,7 @@
    "outputs": [],
    "source": [
     "def cheap_restaurants(restaurants):\n",
-    "    pass"
+    "    list(filter(lambda: ))"
    ]
   },
   {
