--- a/index.ipynb
+++ b/index.ipynb
@@ -551,7 +551,7 @@
    "outputs": [],
    "source": [
     "def cheap_restaurants(restaurants):\n",
-    "    list(filter(lambda restaurant: restaurant['price'] <= 1, ))"
+    "    list(filter(lambda restaurant: restaurant['price'] <= 1, restaurants))"
    ]
   },
   {
