--- a/index.ipynb
+++ b/index.ipynb
@@ -551,7 +551,9 @@
    "outputs": [],
    "source": [
     "def cheap_restaurants(restaurants):\n",
-    "    list(filter(lambda restaurant: restaurant['price'] <= 1, restaurants))"
+    "    return list(filter(lambda restaurant: restaurant['price'] <= 1, restaurants))\n",
+    "    \n",
+    "re "
    ]
   },
   {
