Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -546,14 +546,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheap_restaurants(restaurants):\n",
-    "    return list(filter(lambda restaurant: restaurant['price'] <= 1, restaurants))\n",
-    "    \n",
-    "re "
+    "    return list(filter(lambda restaurant: restaurant['price'] <= 1, restaurants))"
    ]
   },
   {
