--- a/index.ipynb
+++ b/index.ipynb
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -570,7 +570,7 @@
        "  'review_count': 1373}]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +598,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    pass"
+    "    list(filter)"
    ]
   },
   {
