--- a/index.ipynb
+++ b/index.ipynb
@@ -598,7 +598,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
-    "    list(filter(lambda restaurant: ''))"
+    "    list(filter(lambda restaurant: retaurant['review'))"
    ]
   },
   {
